Add logging; Fix test; Code review changes
whoops